update ui (fix gap) and finalize tour

--- a/react-frontend/src/index.css
+++ b/react-frontend/src/index.css
@@ -46,7 +46,6 @@ code {
   position: relative;
   width: 100%;
   text-align: center;
-  bottom: 10px;
 }
 
 .demo_box_labeledtable{
